yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moonbot-ingress
  labels:
    app: moonbot-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: 'alb'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443' 
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:134911113790:certificate/3fecbab4-4bf9-468a-9317-84cb0edd5fff
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: moonbotapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: moonbot-service
            port:
              number: 80
